# contagious-scan

./: README.md  pyproject.toml
contagious_scan/: __init__.py  cli.py  detectors.py  git_utils.py  hook_installer.py  reporter.py  scanner.py  signatures.py
tests/: __init__.py  test_cli.py  test_detectors.py  test_git_utils.py  test_hook_installer.py  test_init.py  test_reporter.py  test_scanner.py  test_signatures.py
tests/fixtures/: malicious_package.json  malicious_setup.py
